--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -56,7 +56,7 @@
 		<nav id="nav_tab" class="mui-bar mui-bar-tab">
 			<a id="bottom-show" class="mui-tab-item mui-active" href="../show/show-home1.html">
 				<span class="mui-icon iconfont icon-dongtai"></span>
-				<span class="mui-tab-label">发现</span>
+				<span class="mui-tab-label">阅读</span>
 			</a>
 			<a class="mui-tab-item" href="../micro-course/course-home1.html">
 				<span class="mui-icon iconfont icon-class"></span>
