--- a/JiaoBaoYun-hb/html/mine/function.html
+++ b/JiaoBaoYun-hb/html/mine/function.html
@@ -21,7 +21,9 @@
 			<h1 class="mui-title">功能介绍</h1>
 		</header>
 		<div class="mui-content">
-			<p style="font-size: 15px;margin:10px ;"> &nbsp&nbsp&nbsp&nbsp&nbsp教宝云为全新面貌升级，通过专业的技术服务团队，为学校及家长等提供家校互联产品及服务。此产品的主要功能有：<br/> &nbsp&nbsp&nbsp&nbsp&nbsp老师通过点到与记事，针对每个孩子在校考勤情况与在校表现一对一记录，给每个孩子一个密切关注，云盘长久保存。提供云存储功能，图片、视频等任意传，长久保存孩子成长过程及文件等资料，安全可靠！提供应用模块，其中包含手机通讯录、手机图库、笔记等应用。<br/>&nbsp&nbsp&nbsp&nbsp&nbsp 学生动态老师一对一跟踪，实时掌握班级通知、校园活动,班级家长之间分享与互动记录孩子成长过程、分享教育经验。<br/>&nbsp&nbsp&nbsp&nbsp&nbsp 提供科教新闻栏目，实时掌握教育新闻等知识传递。求知问答专家在线，有问必答。提供在线辅导，金牌专家为您在线服务。学生作业在提交，且答案拍照上传在线比对答案，方便快捷！
+			<p style="font-size: 15px;margin:10px ;"> &nbsp&nbsp&nbsp&nbsp&nbsp微视学堂”是一个专门服务于25到50岁用户群体，主要内容以5到10分钟轻松学习小视频为主，文字说明为辅的视频学习中心。
+“微视学堂”内容集科普性、专业性、趣味性于一体，主要着眼于家长日常休闲的5到10分钟时间内，为家长提供优质的学习课程，充分利用休闲时间对某一行业、技能、素养进行系统化的学习和提高。
+科普性：以“培养科普素养”为核心目标，除了知识的传授，更重要的是培养用户通过科学理性分析的方式对新闻、事件的内容进行分析、思辨的能力。
 			</p>
 
 		</div>
