--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -22,9 +22,9 @@
 		</header>
 		<!--下拉刷新容器-->
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
-		  <div class="mui-scroll">
+		  <div id="work-detail-stu" v-show="workdetail.Contents" class="mui-scroll">
 		    <!--数据列表-->
-		    <div class="work-detail">
+		    <div  class="work-detail">
 				<div class="homework-brief">
 					<span class="subject-icon"></span>
 					<div class="brief-words">
@@ -60,6 +60,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.zoom.js "></script>
 		<script src="../../js/mui.previewimage.js"></script>
+		<script src="../../js/utils/vue.min.js"></script>
 		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/events.js" type="text/javascript"></script>
