--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -16,13 +16,14 @@
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 
 		<link href="../../css/homework/subjects-icon.css" rel="stylesheet" />
-		<script src="../../js/mui.min.js"></script>
+
 		<style type="text/css">
 			#content:before,
 			#content:after {
 				height: 0px;
 			}
-			.mui-bar-tab~.mui-content{
+			
+			.mui-bar-tab~.mui-content {
 				padding-bottom: 60px;
 			}
 		</style>
@@ -35,14 +36,14 @@
 				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 2px;width: 95%;background-color: #00a5e0;border-color:#00a5e0 ;height: 40px;font-size:16px;letter-spacing: 1px;">一键提醒</button>
 			</div>
 		</nav>
-		<div class="mui-content mui-scroll-wrapper" style="background-color: white;">
-			<div class="mui-scroll">
+		<div id="work-detail-tea" class="mui-content mui-scroll-wrapper" style="background-color: white;">
+			<div class="mui-scroll" v-show="workDetail.length>0">
 				<ul id="content" class="mui-table-view">
 					<li class="mui-table-view-cell mui-media ">
 						<img>
 						<span id="img" class=" iconfont subject-icon" style="margin-left: -10px;"></span>
 						</img>
-						<div class="mui-media-body" style="margin-top: -18px" ;>
+						<div class="mui-media-body" style="margin-top: -18px;">
 							<h5 id="homeworkTitle" style="color: #404040;"></h5>
 							<p id="publishDate" class='mui-ellipsis' style="color: #B7B7B7;">发布时间：</p>
 						</div>
@@ -54,7 +55,6 @@
 							<div id="homeWorkContent" class="ellipsis-show" style="font-size: 14px;color: #474747;">
 							</div>
 							<div id="showAll">显示全部</div>
-							<!--<p id="homeWorkContent"></p>-->
 							<div id="brief-imgs" class="brief-imgs" style="margin-top: 5px;">
 							</div>
 						</div>
@@ -70,11 +70,11 @@
 				</div>
 				<!--滑动组件-->
 				<div id="sliderSegmentedControl" class=" mui-segmented-control mui-segmented-control-inverted mui-segmented-control-primary">
-					<!--已完成选项卡-->
+				
 					<a id="item1" class="mui-control-item mui-active" href="#div-finished">
 						已完成(0)
 					</a>
-					<!--未完成选项卡-->
+			
 					<a id="item2" class="mui-control-item" href="#div-unfinish">
 						未完成(0)
 					</a>
@@ -97,16 +97,39 @@
 
 		</div>
 		<!--加载选项按钮-->
-		<script src="../../js/homework/homework_detail.js"></script>
+
+		<script src="../../js/utils/vue.min.js"></script>
+		<script type="text/javascript">
+			var workDetailTea = new Vue({
+				el: "#work-detail-tea",
+				data: {
+					workDetail: []
+				},
+				methods: {
+					resetData: function() {
+						this.workdetail = [];
+					}
+				}
+			});
+		</script>
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
+		<script src="../../js/homework/homework_detail.js"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
 
 		<script type="text/javascript">
-			mui.init();
+			mui.init({
+				beforeback: function() {
+					if(mui.getPreviewImage().isShown()) {
+						return true;
+					}
+					workDetailTea.resetData();
+					return true;
+				}
+			});
 			mui('.mui-scroll-wrapper').scroll();
 			var allAlertFlag = 0; //标志是否全部提醒
 			var homeworkDetailNodes = {
@@ -477,6 +500,7 @@
 					}
 
 				}
+				workDetailTea.workDetail = uploadArray.length > 0 ? uploadArray : remainArray;
 				if(allAlertFlag == remainArray.length) {
 					homeworkDetailNodes.alertAllBtn.disabled = 'disabled';
 				}
