--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -1238,6 +1238,7 @@
 					document.getElementById("section_top_title").style.marginRight = collapse_content_show.offsetWidth + 6 + "px";
 					video.src = fpath;
 					video.style.backgroundImage = "url(" + thumb + ")";
+					events.playVideoCheckWeb();
 				} else if(type == 2) { //音频
 					document.getElementById("scroll_wrapper").style.top = "144px";
 					document.getElementById("video_area").style.display = "none";
