长按删除问题

--- a/JiaoBaoYun-hb/html/quan/zone_main.html
+++ b/JiaoBaoYun-hb/html/quan/zone_main.html
@@ -425,6 +425,7 @@
 			 * 上拉加载具体业务实现
 			 */
 			function pullupRefresh() {
+				console.log(22222222222)
 				//			setTimeout(function() {
 				flag = 1; //上拉加载更多
 				if(tempPage * 10 > totalCnt || tempPage * 10 == totalCnt) {
