--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -255,11 +255,10 @@
 			});
 
 			mui.plusReady(function() {
-				var wd = events.showWaiting();
 				initData(); //初始化数据
 				init(); //初始化界面
 				initListener(); //初始化监听
-				getNotes(1, wd); //获取数据
+				getNotes(1, 0); //获取数据
 			});
 
 			/**
@@ -327,10 +326,7 @@
 					down: {
 						callback: function() {
 							//console.log('down ' + JSON.stringify(page));
-							getNotes(1);
-							setTimeout(function() {
-								pullRefresh.endPullDownToRefresh(); //结束下拉刷新
-							}, 1000);
+							getNotes(1, 1);
 						}
 					},
 					up: {
@@ -339,13 +335,11 @@
 						callback: function() {
 							//console.log('up ' + JSON.stringify(page));
 							if(page) {
-								getNotes(page.pageIndex + 1);
+								getNotes(page.pageIndex + 1, 2);
 							} else {
+								pullRefresh.endPullUpToRefresh();
 								mui.toast('数据异常，请下拉刷新后重新尝试');
 							}
-							setTimeout(function() {
-								endPullUp();
-							}, 1000);
 						}
 					}
 				});
@@ -449,10 +443,10 @@
 												encImg: '', //附件缩略图地址
 												encLen: 0 //音视频时长
 											}, wd, function() {
-												finishCommit(wd);
+												finishCommit(wd, 3);
 											});
 										} else { //没有记事
-											finishCommit(wd);
+											finishCommit(wd, 3);
 										}
 									});
 								} else { //没有点到
@@ -466,7 +460,7 @@
 											encImg: '', //附件缩略图地址
 											encLen: 0 //音视频时长
 										}, wd, function() {
-											finishCommit(wd);
+											finishCommit(wd, 3);
 										});
 									}
 								}
@@ -611,10 +605,14 @@
 			 * 完成所有的提交后执行的方法
 			 * @param {Object} wd
 			 */
-			function finishCommit(wd) {
+			function finishCommit(wd, type) {
+				if(type == 3) {
+					getNotes(1, 0, wd);
+					changeCommit();
+					return;
+				}
 				setTimeout(function() {
-					wd.close();
-					getNotes(1);
+					getNotes(1, 0, wd);
 					changeCommit();
 				}, 1000);
 			}
@@ -684,8 +682,15 @@
 			 * 获取用户针对某学生的点到记事列表
 			 * @param {Object} pageIndex 当前页数
 			 */
-			function getNotes(pageIndex, wd) {
-				var wd = wd || events.showWaiting();
+			function getNotes(pageIndex, type, waiting) {
+				var wd = null;
+				if(type == 0) {
+					if(waiting) {
+						wd = waiting;
+					} else {
+						wd = events.showWaiting();
+					}
+				}
 				var comData = {
 					userId: personal.utid, //用户ID----utid
 					studentId: mainData.stuid, //学生ID----stuid
@@ -713,7 +718,6 @@
 							document.getElementById('top').innerHTML = '';
 							pullRefresh.refresh(true); //更新当前控件
 						}
-						endPullUp();
 
 						////console.log(document.getElementById("top").innerHTML);
 						if(data.RspData.Data.length == 0 && pageIndex == 1) {
@@ -724,9 +728,15 @@
 							}
 						}
 					} else {
-						mui.toast('获取点到记事列表 ' + data.RspTxt);
+						mui.toast(data.RspTxt);
 					}
-					events.closeWaiting(wd);
+					if(type == 0) {
+						wd.close();
+					}
+					if(type == 1) { //结束下拉刷新
+						pullRefresh.endPullDownToRefresh();
+					}
+					endPullUp();
 				});
 			}
 
