修改学生档案页面的等待框

--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -392,6 +392,7 @@
 
 			//刷新界面
 			window.addEventListener('refreshView', function() {
+				mui('#pullrefresh').scroll().scrollTo(0, 0, 100);
 				requestData(1, 0);
 			});
 
