--- a/JiaoBaoYun-hb/html/show/show-all.html
+++ b/JiaoBaoYun-hb/html/show/show-all.html
@@ -17,9 +17,9 @@
 		<div id="show-all" class="mui-content mui-fullscreen mui-scroll-wrapper">
 			<div class="mui-scroll">
 				<!--数据列表-->
-				<div  v-show="listData.length>0" class=" show-list">
+				<div v-show="listData.length>0" class=" show-list">
 					<div v-for="cardData of listData" class="mui-table-view cityNews-container">
-						<li v-for="(item,index) of cardData" class="mui-table-view-cell news-container">
+						<li v-for="(item,index) of cardData" class="mui-table-view-cell news-container" v-on:tap="jumpToPage(item)">
 							<div class="img-container news-img" v-bind:style="{'background-image':'url('+getBackImg(item,index)+')','background-position':'center','background-size':'cover'}">
 							</div>
 							<div class="news-words">
@@ -72,10 +72,7 @@
 				showCity.pageIndex = 1;
 				show_list.getShowList(showCity, function(showCity, data) {
 					console.log('获取的关注数据：', data);
-					if(showCity.pageIndex == 1) {
-						showAll.listData = [];
-					}
-					showAll.listData.push(data);
+					showAll.addData(showCity.pageIndex, data);
 					showCity.pageIndex++;
 					mui('#show-all').pullRefresh().endPulldown();
 				})
@@ -85,23 +82,25 @@
 				console.log("上拉加载更多")
 				show_list.getShowList(showCity, function(showCity, data) {
 					console.log('获取的关注数据：', data);
-					if(showCity.pageIndex == 1) {
-						showAll.listData = [];
-					}
-					showAll.listData.push(data);
+					showAll.addData(showCity.pageIndex, data);
 					showCity.pageIndex++;
+					mui('#show-all').pullRefresh().endPullupToRefresh();
 				})
 			}
 			mui.plusReady(function() {
 				show_list.getShowList(showCity, function(showCity, data) {
 					console.log('获取的关注数据：', data);
-					if(showCity.pageIndex == 1) {
-						showAll.listData = [];
-					}
-					showAll.listData.push(data);
+					showAll.addData(showCity.pageIndex, data);
 					showCity.pageIndex++;
 				})
+				setListener();
 			})
+			function setListener(){
+				window.addEventListener("detailReady",function(){
+					console.log("获取监听事件 detailReady");
+					showAll.detailReady=true;
+				})
+			}
 		</script>
 	</body>
 
