--- a/JiaoBaoYun-hb/html/quan/leaveNew.html
+++ b/JiaoBaoYun-hb/html/quan/leaveNew.html
@@ -101,7 +101,7 @@
 				//清除节点
 				document.getElementById('list-container').innerHTML = "";
 				//24.获取某个用户的回答列表
-				getUserSpaceMsgsById(userID);
+				getUserSpaceMsgsById(userID,null);
 
 				//上拉下拉注册
 				mui(".mui-scroll-wrapper .mui-scroll").pullToRefresh({
@@ -116,8 +116,9 @@
 								getUserSpaceMsgsById(userID);
 							} else {
 								mui.toast('没有更多了');
+								self.endPullDownToRefresh();
 							}
-							self.endPullDownToRefresh();
+							
 						}
 					},
 					//					up: {
@@ -133,17 +134,14 @@
 			});
 
 			//49.（用户空间）获取用户空间所有留言
-			function getUserSpaceMsgsById(userId) {
+			function getUserSpaceMsgsById(userId,self) {
 				var comData = {
 					userId: userId, //留言板拥有者id
 					pageIndex: pageIndex, //当前页数
 					pageSize: '10' //每页记录数
 				};
-				// 等待的对话框
-				var wd = events.showWaiting();
 				//49.（用户空间）获取用户空间所有留言，model_userSpaceInfo
-				postDataPro_getUserSpaceMsgsById(comData, wd, function(data) {
-					wd.close();
+				postDataPro_getUserSpaceMsgsById(comData, null, function(data) {
 					//console.log('49、空间所有留言:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt + data.RspData.TotalCnt);
 					if(data.RspCode == 0) {
 						//总页数
@@ -154,7 +152,7 @@
 								userId: personalUTID, //用户ID
 								spaceTypes: '[7,8]'
 							}
-							postDataPro_setCommentMsgReadByUser(comData, wd, function(data) {
+							postDataPro_setCommentMsgReadByUser(comData, null, function(data) {
 								//console.log('59与我相关设置成已读:' + JSON.stringify(data));
 							})
 						}
@@ -178,8 +176,7 @@
 						}
 						//console.log('tempData:' + JSON.stringify(tempData));
 						//21.通过用户ID获取用户资料
-						postDataPro_PostUinf(tempData, wd, function(data1) {
-							wd.close();
+						postDataPro_PostUinf(tempData, null, function(data1) {
 							//console.log('21、获取个人资料:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
 							if(data1.RspCode == 0) {
 								//循环当前的个人信息返回值数组
@@ -218,6 +215,9 @@
 
 					} else {
 						mui.toast(data.RspTxt);
+					}
+					if (self) {
+						self.endPullDownToRefresh();
 					}
 				});
 			};
